@@ -1,4 +1,4 @@
-// Copyright (C) 2001-2007 Philip Aston
+// Copyright (C) 2001 - 2007 Philip Aston
 // All rights reserved.
 //
 // This file is part of The Grinder software distribution. Refer to
@@ -78,8 +78,7 @@ final class LoggerImplementation {
   }
 
   /**
-   * Use our DateFormat at most once a tick. Don't synchronise, who
-   * cares if its wrong?
+   * Use our DateFormat at most once a tick.
    */
   private static String getDateString() {
 
@@ -349,6 +348,17 @@ final class LoggerImplementation {
         s_stderrWriter.flush();
       }
 
+      if (!m_errorOccurred && (w & Logger.TERMINAL) == 0) {
+        m_processLogger.output(
+          "There were errors, see " + m_errorFile + " for full details",
+          Logger.TERMINAL);
+
+        s_stderrWriter.write(state.m_outputLine, 0, lineLength);
+        s_stderrWriter.flush();
+
+        m_errorOccurred = true;
+      }
+
       final int summaryLength = 20;
 
       final String summary =
@@ -360,13 +370,6 @@ final class LoggerImplementation {
                      "\"), see error log for details",
                      Logger.LOG);
 
-      if (!m_errorOccurred && (w & Logger.TERMINAL) == 0) {
-        m_processLogger.output(
-          "There were errors, see " + m_errorFile + " for details",
-          Logger.TERMINAL);
-
-        m_errorOccurred = true;
-      }
     }
   }
 
